Work on flag permission checking methods